--- a/frontend/src/assets/styles/global-styles.scss
+++ b/frontend/src/assets/styles/global-styles.scss
@@ -9,3 +9,88 @@
 .rotate-on-90 {
   transform: rotate(90deg);
 }
+
+.header-text-size {
+  font-size: 24px;
+}
+
+.usual-text-size {
+  font-size: 20px;
+}
+
+.fs-17px {
+  font-size: 17px;
+}
+
+.fs-14px {
+  font-size: 14px;
+}
+
+.above-usual-text-size {
+  font-size: 18px;
+}
+
+.min-width-300 {
+  min-width: 300px;
+}
+
+.height-100vh {
+  height: 100vh;
+}
+
+.flex-1 {
+  flex: 1;
+}
+
+.width-height-30 {
+  width: 30px;
+  height: 30px;
+}
+
+.max-width-150 {
+  max-width: 150px;
+}
+
+.width-160 {
+  width: 160px;
+}
+
+.text-ender-160 {
+  width: 160px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.width-height-60 {
+  width: 60px;
+  height: 60px;
+}
+
+.width-height-20 {
+  width: 20px;
+  height: 20px;
+}
+
+.vertical-grid {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-areas:
+    "top"
+    "center"
+    "bottom";
+
+  & > .top {
+    grid-area: top;
+  }
+
+  & > .center {
+    grid-area: center;
+  }
+
+  & > .bottom {
+    grid-area: bottom;
+  }
+}
+
